--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
               <li>JWT</li>
             </ul>
           </div>
-          <img src="assets/CoffeeTime.png" alt="" />
+          <img src="assets/coffeetime.png" alt="" />
         </article>
         <article>
           <div class="text">
