--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
               Hello world, i'm Justin, a software engineer specializing in the
               MERN stack. I have worked on a variety of exciting projects such
               as SoftI, CoffeeTime 2.0 and most recently, Caribu. When I am not
-              busy coding, you can find me indulging in my passions for Hockey,
+              busy coding, you can find me indulging in my passions for hockey,
               running, and traveling. I love to stay active and enjoy playing
               just about any outdoor sport. Whether you're interested in my work
               or just want to chat, feel free to connect with me on LinkedIn or
