--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/x-icon" href="assets/icons8-laptop-16.png" />
+    <link rel="icon" type="image/x-icon" href="icons8-code-96.png" />
     <link rel="stylesheet" href="styles.css" />
     <script
       src="https://kit.fontawesome.com/1cebc5a491.js"
@@ -85,7 +85,10 @@
               <li>Babel</li>
             </ul>
           </div>
-          <img src="assets/Screenshot 2023-04-20 at 4.05.37 PM.png" alt="" />
+          <img
+            src="https://i.postimg.cc/tJxHx6BM/Screenshot-2023-04-20-at-4-05-37-PM.png"
+            alt=""
+          />
         </article>
         <article class="reverse">
           <div class="text">
@@ -103,7 +106,10 @@
               <li>JWT</li>
             </ul>
           </div>
-          <img src="assets/coffeetime.png" alt="" />
+          <img
+            src="https://i.postimg.cc/HLnWLr1f/Screenshot-2023-04-20-at-5-29-31-PM.png"
+            alt=""
+          />
         </article>
         <article>
           <div class="text">
@@ -122,7 +128,10 @@
               <li>React Webcam Library</li>
             </ul>
           </div>
-          <img src="assets/SoftI.png" alt="" />
+          <img
+            src="https://i.postimg.cc/g0zdTn0x/Screenshot-2023-04-20-at-5-43-31-PM.png"
+            alt=""
+          />
         </article>
       </section>
     </div>
