--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/x-icon" href="assets/icons8-laptop-16.png" />
+    <link rel="icon" type="image/x-icon" href="icons8-code-96.png" />
     <link rel="stylesheet" href="styles.css" />
     <script
       src="https://kit.fontawesome.com/1cebc5a491.js"
@@ -74,7 +74,7 @@
               <li>Docker</li>
             </ul>
           </div>
-          <img src="assets/justin.jpg" alt="" />
+          <img src="https://i.postimg.cc/R0W9B2cm/IMG-9396.jpg" alt="" />
         </article>
       </section>
     </div>
