Fix spelling error

--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
               running, and traveling. I love to stay active and enjoy playing
               just about any outdoor sport. Whether you're interested in my work
               or just want to chat, feel free to connect with me on LinkedIn or
-              reach out to me over email. Thanks for stopping by!"
+              reach out to me over email. Thanks for stopping by!
             </p>
             <h4>Favorite Technologies</h4>
             <ul>
