--- a/index.html
+++ b/index.html
@@ -51,11 +51,8 @@
     </nav>
     <section id="intro">
       <p class="name">Hi, my name is <span>Justin Ribarich.</span></p>
-      <h2>I develop web applications</h2>
-      <p>
-        I'm a Software Engineer specializing in React, Node, Express, SQL &
-        NoSQL databases.
-      </p>
+      <h2>I am a Software Engineer</h2>
+      <p>specializing in React, Node, Express, SQL & NoSQL databases.</p>
       <p>
         Most recently I worked with a team of engineers on
         <a href="https://www.caribujs.com/">Caribu</a>
