fav tech updated

--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
               <li>React</li>
               <li>Svelte</li>
               <li>Express</li>
-              <li>Docker</li>
+              <li>Laravel</li>
             </ul>
           </div>
           <img src="https://i.postimg.cc/R0W9B2cm/IMG-9396.jpg" alt="" />
