--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </li>
         <li>
           <a
-            href="https://www.dropbox.com/s/veq0348ovhsrffg/Justin%20Ribarich%20Resume.docx.pdf?dl=0"
+            href="https://www.dropbox.com/s/u23mjn08u0zxsv9/Justin%20RIbarich%20Resume%202.pdf?dl=0"
             class="button"
             >Resume</a
           >
