Updated projects and new color scheme!

--- a/about.html
+++ b/about.html
@@ -56,9 +56,9 @@
           <div class="text">
             <h3>Highlights</h3>
             <p class="blackbox">
-              Hello world, i'm Justin, a software engineer specializing in the
-              MERN stack. I have worked on a variety of exciting projects such
-              as SoftI, CoffeeTime 2.0 and most recently, Caribu. When I am not
+              Hello world, i'm Justin, a software engineer specializing in full
+              stack development. I have worked on a variety of exciting projects
+              such as CoffeeTime 2.0 and most recently, Caribu. When I am not
               busy coding, you can find me indulging in my passions for hockey,
               running, and traveling. I love to stay active and enjoy playing
               just about any outdoor sport. Whether you're interested in my work
