--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <section id="intro">
       <p class="name">Hi, my name is <span>Justin Ribarich.</span></p>
       <h2>I am a Software Engineer</h2>
-      <p>specializing in React, Node, Express, SQL & NoSQL databases.</p>
+      <p>I specialize in Full Stack Development.</p>
       <p>
         Most recently I worked with a team of engineers on
         <a href="https://www.caribujs.com/">Caribu</a>
@@ -89,6 +89,24 @@
         </article>
         <article class="reverse">
           <div class="text">
+            <h4>Laravel Job Finder</h4>
+            <h3>LaraJobs</h3>
+            <p class="blackbox">
+              LaraJobs allows users to securely login and view job postings
+              involving the Laravel framework as well as post their own jobs.
+            </p>
+            <h4>Technologies used include:</h4>
+            <ul>
+              <li>Laravel</li>
+              <li>PHP</li>
+              <li>Blade</li>
+              <li>MySQL</li>
+            </ul>
+          </div>
+          <img src="https://images2.imgbox.com/ab/c5/mKOTg7X6_o.png" alt="" />
+        </article>
+        <article class="reverse">
+          <div class="text">
             <h4>Live Activity Tracker</h4>
             <h3>CoffeeTime 2.0</h3>
             <p class="blackbox">
@@ -108,28 +126,6 @@
             alt=""
           />
         </article>
-        <article>
-          <div class="text">
-            <h4>Soft Skills Practice Tool</h4>
-            <h3>SoftI</h3>
-            <p class="blackbox">
-              Most developers get wrapped up in practicing only technical skills
-              when interviewing for jobs. SoftI allows you to practice the soft
-              skills of the interview process as well as recording and saving
-              each attempt.
-            </p>
-            <h4>Technologies used include:</h4>
-            <ul>
-              <li>React/Redux</li>
-              <li>Amazon S3</li>
-              <li>React Webcam Library</li>
-            </ul>
-          </div>
-          <img
-            src="https://i.postimg.cc/g0zdTn0x/Screenshot-2023-04-20-at-5-43-31-PM.png"
-            alt=""
-          />
-        </article>
       </section>
     </div>
     <div class="gradient"></div>
@@ -137,8 +133,8 @@
       <section id="contact">
         <h2>Contact me</h2>
         <p>
-          Im always interested in new opportunities and especially new
-          technologies, please don't hesitate to reach out!
+          I'm always interested in new opportunities, please don't hesitate to
+          reach out!
         </p>
         <p>
           <a href="mailto:jribarich98@gmail.com" class="button">Email me</a>
@@ -169,7 +165,7 @@
           ></a>
         </li>
       </ul>
-      <p><small>© 2022 Justin Ribarich. All rights reserved.</small></p>
+      <p><small>© 2023 Justin Ribarich. All rights reserved.</small></p>
     </footer>
   </body>
 </html>
