added yoda quote

--- a/index.html
+++ b/index.html
@@ -53,10 +53,11 @@
       <p class="name">Hi, my name is <span>Justin Ribarich.</span></p>
       <h2>I am a Software Engineer</h2>
       <p>I specialize in Full Stack Development.</p>
-      <p>
+      <!-- <p>
         Most recently I worked with a team of engineers on
         <a href="https://www.caribujs.com/">Caribu</a>
-      </p>
+      </p> -->
+      <p><em>"The greatest teacher, failure is."</em> - Master Yoda</p>
     </section>
     <div class="gradient"></div>
     <div class="section-dkblue">
