New project added

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         Most recently I worked with a team of engineers on
         <a href="https://www.caribujs.com/">Caribu</a>
       </p> -->
-      <p><em>"The greatest teacher, failure is."</em> - Master Yoda</p>
+      <p><em>"Not everyone can become a great artist; but a great artist can come from anywhere."</em> - Anton Ego</p>
     </section>
     <div class="gradient"></div>
     <div class="section-dkblue">
@@ -108,6 +108,27 @@
         </article>
         <article class="reverse">
           <div class="text">
+            <h4>IT Service Desk</h4>
+            <h3>RibsRescueDesk</h3>
+            <p class="blackbox">
+              RibsRescueDesk is the one and done application for all
+              IT departments. Users can sign and submit tickets for different categories,
+              and Admins can assign and respond to tickets.
+            </p>
+            <h4>Technologies used include:</h4>
+            <ul>
+              <li>Laravel</li>
+              <li>MySQL</li>
+              <li>Tailwind</li>
+            </ul>
+          </div>
+          <img
+            src="https://imgbox.com/gallery/edit/K8CuoFMkm4/ohO3U01ly6uzre79"
+            alt=""
+          />
+        </article>
+        <!-- <article class="reverse">
+          <div class="text">
             <h4>Live Activity Tracker</h4>
             <h3>CoffeeTime 2.0</h3>
             <p class="blackbox">
@@ -126,7 +147,7 @@
             src="https://i.postimg.cc/HLnWLr1f/Screenshot-2023-04-20-at-5-29-31-PM.png"
             alt=""
           />
-        </article>
+        </article> -->
       </section>
     </div>
     <div class="gradient"></div>
