fix new project pic

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
               <li>MySQL</li>
             </ul>
           </div>
-          <img src="https://images2.imgbox.com/ab/c5/mKOTg7X6_o.png" alt="" />
+          <img src="https://images2.imgbox.com/f5/72/ROhEulu5_o.png" alt="" />
         </article>
         <article class="reverse">
           <div class="text">
