fix image again

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         Most recently I worked with a team of engineers on
         <a href="https://www.caribujs.com/">Caribu</a>
       </p> -->
-      <p><em>"Not everyone can become a great artist; but a great artist can come from anywhere."</em> - Anton Ego</p>
+      <p><em>"Not everyone can become a great artist; but a great artist can come from anywhere."</em> - Anton</p>
     </section>
     <div class="gradient"></div>
     <div class="section-dkblue">
@@ -104,7 +104,7 @@
               <li>MySQL</li>
             </ul>
           </div>
-          <img src="https://images2.imgbox.com/f5/72/ROhEulu5_o.png" alt="" />
+          <img src="https://images2.imgbox.com/ab/c5/mKOTg7X6_o.png" alt="" />
         </article>
         <article class="reverse">
           <div class="text">
@@ -123,7 +123,7 @@
             </ul>
           </div>
           <img
-            src="https://imgbox.com/gallery/edit/K8CuoFMkm4/ohO3U01ly6uzre79"
+            src="https://images2.imgbox.com/ab/c5/mKOTg7X6_o.png"
             alt=""
           />
         </article>
