--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             </ul>
           </div>
           <img
-            src="https://images2.imgbox.com/ab/c5/mKOTg7X6_o.png"
+            src="https://thumbs2.imgbox.com/f5/72/ROhEulu5_t.png"
             alt=""
           />
         </article>
@@ -187,7 +187,7 @@
           ></a>
         </li>
       </ul>
-      <p><small>© 2023 Justin Ribarich. All rights reserved.</small></p>
+      <p><small>© 2024 Justin Ribarich. All rights reserved.</small></p>
     </footer>
   </body>
 </html>
