Final product update

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         Most recently I worked with a team of engineers on
         <a href="https://www.caribujs.com/">Caribu</a>
       </p> -->
-      <p><em>"Not everyone can become a great artist; but a great artist can come from anywhere."</em> - Anton</p>
+      <p><em>"Not everyone can become a great artist; but a great artist can come from anywhere."</em> - Anton Ego</p>
     </section>
     <div class="gradient"></div>
     <div class="section-dkblue">
@@ -123,7 +123,7 @@
             </ul>
           </div>
           <img
-            src="https://thumbs2.imgbox.com/f5/72/ROhEulu5_t.png"
+            src="https://i.postimg.cc/15q8pJB8/Screenshot-2024-08-12-at-4-40-13-PM.png"
             alt=""
           />
         </article>
