--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         Most recently I worked with a team of engineers on
         <a href="https://www.caribujs.com/">Caribu</a>
       </p> -->
-      <p><em>"Not everyone can become a great artist; but a great artist can come from anywhere."</em> - Anton Ego</p>
+      <p><em>“All we have to decide is what to do with the time that is given to us” </em> - Gandalf</p>
     </section>
     <div class="gradient"></div>
     <div class="section-dkblue">
