--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/x-icon" href="icons8-code-96.png" />
+    <link rel="icon" type="image/x-icon" href="croatia.png" />
     <link rel="stylesheet" href="styles.css" />
     <script
       src="https://kit.fontawesome.com/1cebc5a491.js"
