--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
         <li>
           <h1>
             <a href="index.html"
-              ><span class="fa-solid fa-laptop-code"></span>
+              ><img src="/croatia.png" style="width: 1.5rem;">
               <span>Justin Ribarich</span></a
             >
           </h1>
