Updated about and index pages with new icon, revised personal introduction, and adjusted footer copyright year. Enhanced styles with a new color palette and responsive design improvements across various sections.

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/x-icon" href="icons8-code-96.png" />
+    <link rel="icon" type="image/x-icon" href="croatia.png" />
     <link rel="stylesheet" href="styles.css" />
     <script
       src="https://kit.fontawesome.com/1cebc5a491.js"
@@ -18,7 +18,7 @@
         <li>
           <h1>
             <a href="index.html"
-              ><img src="/croatia.png" style="width: 1.5rem;">
+              ><img src="croatia.png" style="width: 1.5rem;">
               <span>Justin Ribarich</span></a
             >
           </h1>
@@ -56,14 +56,11 @@
           <div class="text">
             <h3>Highlights</h3>
             <p class="blackbox">
-              Hello world, i'm Justin, a software engineer specializing in full
-              stack development. I have worked on a variety of exciting projects
-              such as CoffeeTime 2.0 and most recently, Caribu. When I am not
-              busy coding, you can find me indulging in my passions for hockey,
-              running, and traveling. I love to stay active and enjoy playing
-              just about any outdoor sport. Whether you're interested in my work
-              or just want to chat, feel free to connect with me on LinkedIn or
-              reach out to me over email. Thanks for stopping by!
+              Hello world! I'm Justin, a passionate software engineer specializing in full-stack development with a love for creating innovative solutions. I've had the privilege of working on exciting projects like CoffeeTime 2.0 and most recently, Caribu, where I help transform ideas into powerful applications that make a real difference.
+              <br><br>
+              When I'm not immersed in code, you'll find me pursuing my other passions: competing on the hockey rink, hitting the trails for a run, or exploring new destinations around the world. I believe staying active and curious keeps me sharp both as a developer and as a person.
+              <br><br>
+              Whether you're interested in discussing technology, potential collaborations, or just want to chat about life, I'd love to connect! Feel free to reach out on LinkedIn or drop me an email. Thanks for stopping by!
             </p>
             <h4>Favorite Technologies</h4>
             <ul>
@@ -103,7 +100,7 @@
           ></a>
         </li>
       </ul>
-      <p><small>© 2022 Justin Ribarich. All rights reserved.</small></p>
+      <p><small>© 2025 Justin Ribarich. All rights reserved.</small></p>
     </footer>
   </body>
 </html>
