--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <li>
           <h1>
             <a href="index.html"
-              ><img src="/croatia.png" style="width: 1.5rem;">
+              ><img src="croatia.png" style="width: 1.5rem;">
               
               <span>Justin Ribarich</span></a
             >
@@ -107,7 +107,7 @@
           </div>
           <img src="https://images2.imgbox.com/ab/c5/mKOTg7X6_o.png" alt="" />
         </article>
-        <article class="reverse">
+        <article>
           <div class="text">
             <h4>IT Service Desk</h4>
             <h3>RibsRescueDesk</h3>
