Updated resume link in about and index pages, revised latest project description to Mentee Map, and modified technologies list. Adjusted image styling in CSS for improved appearance.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </li>
         <li>
           <a
-            href="https://www.dropbox.com/s/u23mjn08u0zxsv9/Justin%20RIbarich%20Resume%202.pdf?dl=0"
+            href="https://www.dropbox.com/scl/fi/ufdzd7vec42nyxe1bz0r9/Justin-RIbarich-Resume.pdf?rlkey=xdapxt7xzvj9656ijko78mmpc&st=sauq4lji&dl=0"
             class="button"
             >Resume</a
           >
@@ -67,27 +67,27 @@
         <article>
           <div class="text">
             <h4>Latest Project</h4>
-            <h3>Caribu</h3>
+            <h3>Mentee Map</h3>
             <p class="blackbox">
-              Caribu is an application that assists developers in migrating
-              their monolithic applications into a micro-service based
-              architecture. It allows developers to view their applications code
-              piece by piece, displaying which functions are eligible to become
-              serverless, and which need refactoring.
+              Mentee Map is a web application designed to help faculty efficiently
+              monitor mentee goals, performance, and academic progress. The platform
+              presents mentee survey insights through a clean, intuitive interface,
+              enabling mentors to quickly identify strengths, trends, and areas for
+              improvement. It also provides streamlined access to exam scores with
+              advanced filtering and search tools, allowing faculty to make data-driven
+              decisions with ease.
             </p>
             <h4>Technologies used include:</h4>
             <ul>
-              <li>TypeScript</li>
-              <li>React/Router/Redux Toolkit</li>
-              <li>Electron</li>
-              <li>Express</li>
-              <li>Babel</li>
+              <li>Laravel</li>
+              <li>React</li>
+              <li>MySQL</li>
+              <li>Redis</li>
+              <li>Docker</li>
+              <li>REDcap API</li>
             </ul>
           </div>
-          <img
-            src="https://i.postimg.cc/tJxHx6BM/Screenshot-2023-04-20-at-4-05-37-PM.png"
-            alt=""
-          />
+          <img src="https://i.ibb.co/qFkgpSZj/Screenshot-2026-01-22-at-3-26-01-PM.png" alt="f4cbXje.md.png">
         </article>
         <article class="reverse">
           <div class="text">
