--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
         </li>
         <li>
           <a
-            href="https://www.dropbox.com/s/u23mjn08u0zxsv9/Justin%20RIbarich%20Resume%202.pdf?dl=0"
+            href="https://www.dropbox.com/scl/fi/ufdzd7vec42nyxe1bz0r9/Justin-RIbarich-Resume.pdf?rlkey=xdapxt7xzvj9656ijko78mmpc&st=sauq4lji&dl=0"
             class="button"
             >Resume</a
           >
@@ -66,9 +66,9 @@
             <ul>
               <li>JavaScript</li>
               <li>React</li>
-              <li>Svelte</li>
-              <li>Express</li>
+              <li>Docker</li>
               <li>Laravel</li>
+              <li>Linux Distributions</li>
             </ul>
           </div>
           <img src="https://i.postimg.cc/R0W9B2cm/IMG-9396.jpg" alt="" />
